# rankwise

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  flake.nix  pyproject.toml
rankwise/: __main__.py  calculations.py  cli.py  data.py  io.py
rankwise/classify/: calculations.py
rankwise/classify/cosine_distance/: io.py
rankwise/classify/cross_encoder/: __init__.py  io.py
rankwise/entropy/: calculations.py
rankwise/evaluate/: calculations.py  io.py
rankwise/evaluate/classification/: calculations.py
rankwise/evaluate/embedding_model/: calculations.py  data.py  io.py
rankwise/generate/: calculations.py  data.py  io.py
rankwise/importer/: data.py  io.py
scripts/: merge-classifications.py  plot-classification-evaluations.py
tests/: tests.py
